changed css latest news and css news

--- a/css/news.css
+++ b/css/news.css
@@ -24,7 +24,7 @@
     padding: 0;
 }
 
-.latest-news__cards {
+.news__cards {
     box-sizing: border-box;
     overflow-wrap: break-word;
     display: grid;
@@ -37,7 +37,7 @@
 }
 
 @media (min-width: 770px) {
-    .latest-news__menu {
+    .news__menu {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 0;
@@ -45,7 +45,7 @@
     }
 }
 
-.latest-news__menu .component {
+.news__menu .component {
     padding: 15px;
     margin-top: 0;
     margin-left: 15px;
