--- a/css/latest-news.css
+++ b/css/latest-news.css
@@ -3,6 +3,7 @@
     padding-bottom: 50px;
     background-color: var(--second-hover-color);
     text-align: center;
+    position: relative;
 }
 
 .latest-news__title {
@@ -11,74 +12,68 @@
     max-width: 100%;
     word-wrap: break-word;
     text-align: center;
-    margin: 20px 20px 20px 20px;
+    margin: 20px;
     padding: 0;
 }
 
-@media (min-width: 770px) {
-    .latest-news__cards {
-       display: grid;
-       gap: 15px;
-       grid-template-columns: repeat(12, 1fr [col-start]);
-    }
-
-       .latest-news__cards-item:nth-child(1) {
-        grid-column: span 12;
-        grid-row: span 2;
-    }
-
-       .latest-news__cards-item:nth-child(2) {
-        grid-column: span 6;
-    }
- 
-       .latest-news__cards-item:nth-child(3) {
-        grid-column: span 6;
-       }
-} 
-    
-@media (min-width: 980px) {
-    .latest-news__cards {
-        display: grid;
-        gap: 15px;
-        grid-template-columns: repeat(12, 1fr [col-start]);
-    }
-
-       .latest-news__cards-item:nth-child(1) {
-        grid-column: span 7;
-        grid-row: span 2;
-    }
-
-       .latest-news__cards-item:nth-child(2) {
-        grid-column: span 5;
-       }
-
-       .latest-news__cards-item:nth-child(3) {
-        grid-column: span 5;
-    }
+.latest-news__cards {
+    box-sizing: border-box;
+    overflow-wrap: break-word;
+    margin: 10px;
+    padding: 10px;
+    position: relative;
 }
 
 .latest-news__cards .product {
-    padding: 15px 15px 15px 15px;
+    padding: 10px;
     margin-top: 0;
     margin-left: 15px;
-    margin-left: 15px;
-    margin-bottom: 50px;
+    margin-bottom: 10px;
     box-sizing: border-box;
     display: block;
     overflow-wrap: break-word;
     position: relative;
 }
 
-.latest-news__cards {
-    box-sizing: border-box;
-    overflow-wrap: break-word;
-    display: grid;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 30px;
-    padding-inline-end: 30px;
+@media (min-width: 770px) {
+    .latest-news__cards {
+       display: grid;
+       gap: 5px;
+       grid-template-columns: repeat(6, 1fr [col-start]);
+    }
+
+       .latest-news__cards-item:nth-child(1) {
+        grid-column: span 6;
+        grid-row: span 2;
+    }
+
+       .latest-news__cards-item:nth-child(2) {
+        grid-column: span 3;
+    }
+ 
+       .latest-news__cards-item:nth-child(3) {
+        grid-column: span 3;
+       }
+} 
+    
+@media (min-width: 980px) {
+    .latest-news__cards {
+        grid-template-columns: repeat(6, 1fr [col-start]);
+        grid-template-rows: auto auto;
+    }
+
+       .latest-news__cards-item:nth-child(1) {
+        grid-column: span 4;
+        grid-row: auto/span 2 !important;
+    }
+
+       .latest-news__cards-item:nth-child(2) {
+        grid-column: span 2;
+       }
+
+       .latest-news__cards-item:nth-child(3) {
+        grid-column: span 2;
+    }
 }
 
 .product__image {
@@ -93,7 +88,8 @@
     background-color: var(--ui-dark-shade-color);
     display: block;
     overflow-wrap: break-word;
-    padding: 40px;
+    padding: 20px;
+    z-index: 1;
 }
 
 .product__title {
@@ -104,7 +100,7 @@
     box-sizing: border-box;
     display: block;
     font-size: 14px;
-    font-weight: 400px;
+    font-weight: 400;
     color: var(--ui-dark-accent-color);
     width: auto;
     height: auto;
@@ -113,7 +109,7 @@
 .product__text {
     font-family: 'Montserrat', sans-serif;
     text-align: left;
-    font-weight: 600px;
+    font-weight: 600;
     font-size: 22px;
     display: block;
     box-sizing: border-box;
