--- a/css/schedule.css
+++ b/css/schedule.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
-
 body {
     margin: 0;
     padding: 0;
@@ -9,57 +7,73 @@ body {
 
 .schedule-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    flex-direction: column;
 }
 
 .schedule {
     font-size: 2rem;
     margin-bottom: 20px;
     color: #fff;
+    text-align: center;
 }
 
 .schedule__table-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-color: #131313;
-    height: 100vh;
+    overflow-x: auto;
 }
 
 .schedule__table {
-    width: 100%;
+    width: 60%;
     border-collapse: collapse;
     font-size: 1rem;
     color: #fff;
+    table-layout: fixed;
+    margin: 0 auto;
+}
+
+.schedule__row {
+    border-bottom: 1px solid #878787;
 }
 
 .schedule__heading {
     background-color: #131313;
     color: #fff;
-    padding: 10px;
+    padding: 20px;
     font-size: 1.2rem;
-}
-
-.schedule__row:nth-child(even) {
-    background-color: #1a1a1a;
+    border-bottom: 1px solid #878787;
 }
 
 .schedule__data,
 .schedule__time,
 .schedule__program {
-    padding: 10px;
+    padding: 25px;
     text-align: center;
-    flex: 1;
+    vertical-align: top;
+    width: 20%;
 }
 
-@media (min-width: px) and (max-width: 272px) {
+.schedule__time,
+.schedule__program {
+    color: #878787;
+}
+
+.schedule__row:first-child td {
+    vertical-align: middle;
+}
+
+.schedule__row td {
+    vertical-align: top;
+}
+
+@media (min-width: 768px) and (max-width: 786px) {
     .schedule__row {
         display: flex;
         flex-direction: column;
         align-items: center;
         text-align: center;
+     
     }
 }
