--- a/css/schedule.css
+++ b/css/schedule.css
@@ -23,6 +23,7 @@ body {
 .schedule__table-container {
     background-color: #131313;
     overflow-x: auto;
+    
 }
 
 .schedule__table {
@@ -32,6 +33,7 @@ body {
     color: #fff;
     table-layout: fixed;
     margin: 0 auto;
+    border-bottom: 1px solid #878787;
 }
 
 .schedule__row {
@@ -68,12 +70,25 @@ body {
     vertical-align: top;
 }
 
-@media (min-width: 768px) and (max-width: 786px) {
-    .schedule__row {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-     
-    }
+
+.accordion-content {
+    display: none;
+    padding: 10px;
+    background-color: #131313;
+    color: #fff;
+}
+
+.accordion-toggle {
+    background-color: #131313;
+    color: #fff;
+    text-align: left;
+    padding: 20px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    text-align: left;
+}
+
+.accordion-content p {
+    margin: 0;
 }
