--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 @import url(global.css);
 @import url(careers.css);
 @import url(win.css);
+@import url(events.css);
 @import url(fm-faces.css);
 @import url(schedule.css);
 @import url(why-choose-us.css);
