--- a/partials/events.partial.html
+++ b/partials/events.partial.html
@@ -2,9 +2,11 @@
     <h2 class="events__title">
         Events
     </h2>
-    <div class="events__container">
-        <div class="events__container-item event">
-            <img src="img/events/girl-in-swimsuit.jpg" alt="The girl in the red swimsuit" class="event__card">
+    <div class="events__section">
+        <div class="events__container">
+            <div class="event__card">
+                <img src="img/events/girl-in-swimsuit.jpg" alt="The girl in the red swimsuit">
+            </div>
             <div class="event__details">
                 <p class="event__date">August 05, 2018</p>
                 <p class="event__time">10:30pm - 5:30am</p>
@@ -12,26 +14,32 @@
                 <p class="event__place">Rowbarge in Guildford</p>
             </div>
         </div>
-        <div class="events__container-item event">
-            <img src="img/events/polyhedron.jpg" alt="The white polyhedron" class="event__card">
+        <div class="events__container">  
+             <div class="event__card">
+                <img src="img/events/polyhedron.jpg" alt="The white polyhedron">
+            </div>
             <div class="event__details">
                 <p class="event__date">July 14, 2018</p>
                 <p class="event__time">9pm - 4:30am</p>
                 <h3 class="event__name">House of Kane 2018</h3>
                 <p class="event__place">Charterhouse Arms in Godalming</p>
-            </div>
+            </div> 
         </div>
-        <div class="events__container-item event">
-            <img src="img/events/orange-dune.jpg" alt="The orange dune" class="event__card">
+        <div class="events__container">   
+            <div class="event__card">
+                <img src="img/events/orange-dune.jpg" alt="The orange dune">
+            </div>
             <div class="event__details">
                 <p class="event__date">July 26, 2018</p>
                 <p class="event__time">10:30am - 4:30pm</p>
                 <h3 class="event__name">Challengers Wood Street Jazz Festival</h3>
                 <p class="event__place">The station</p>
+            </div> 
+        </div> 
+        <div class="events__container">  
+            <div class="event__card">
+                <img src="img/events/people-in-red-light.jpg" alt="Two people are lying in red light">
             </div>
-        </div>
-        <div class="events__container-item event">
-            <img src="img/events/people-in-red-light.jpg" alt="Two people are lying in red light" class="event__card">
             <div class="event__details">
                 <p class="event__date">July 11, 2018</p>
                 <p class="event__time">All Night</p>
