--- a/css/schedule.css
+++ b/css/schedule.css
@@ -1,16 +1,13 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Montserrat', sans-serif;
-    background-color: #131313;
-}
-
 .schedule-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    background-color: #131313;
 }
 
 .schedule {
@@ -55,6 +52,7 @@ body {
     text-align: center;
     vertical-align: top;
     width: 20%;
+    border-bottom: 1px solid #878787;
 }
 
 .schedule__time,
@@ -81,7 +79,6 @@ body {
 .accordion-toggle {
     background-color: #131313;
     color: #fff;
-    text-align: left;
     padding: 20px;
     border: none;
     cursor: pointer;
