--- a/css/careers.css
+++ b/css/careers.css
@@ -20,10 +20,19 @@
     padding: 0 15px;
 }
 
+.career__content.animate {
+    opacity: 1;
+    transform: translateY(0);
+    transition: opacity 4s ease, transform 4s ease;
+}
+
 .career__content {
     padding: 40px 30px;
     width: 100%;
     background: var(--ui-light-shade-color);
+    opacity: 0;
+    transform: translateY(20px);
+    transition-delay: 1.5s;
 }
 
 .career__intro {
@@ -48,6 +57,7 @@
     font-family: 'Montserrat', sans-serif;
     color: var(--ui-dark-accent-color);
     line-height: 1.5;
+    margin-top: 40px;
 }
 
 .career__button {
@@ -69,14 +79,11 @@
 }
 
 @media (min-width: 768px) {
-    .career__info {
-        margin-top: 40px;
-    }
-
     .career__content {
         padding-top: 40px;
         padding-bottom: 40px;
-        width: 40%;
+        margin-left: 30px;
+        width: 50%;
     }
 }
 
