--- a/partials/featured-podcasts.html
+++ b/partials/featured-podcasts.html
@@ -3,21 +3,21 @@
     <p class="featured-podcasts__description">Download and listen to your favorite shows from Crazy FM for free</p>
     <div class="featured-podcasts__cards container">
         <article class="featured-podcasts__cards-item card">
-            <img width="362" src="img/featured-podcasts/lips.jpeg" alt="lips" class="featured-podcasts__card-image">
+            <img  src="img/featured-podcasts/lips.jpeg" alt="lips" class="featured-podcasts__card-image">
             <h3 class="cards__title">The Dave Berry Breakfast Show</h3>
             <div class="card-button">
                 <button class="card-button button" type="button">Listen now</button>
             </div>
         </article>
         <article class="featured-podcasts__cards-item card">
-            <img width="362" src="img/featured-podcasts/leaf.png" alt="leaf" class="featured-podcasts__card-image">
+            <img  src="img/featured-podcasts/leaf.png" alt="leaf" class="featured-podcasts__card-image">
             <h3 class="cards__title">The Frank Skinner Show</h3>
             <div class="card-button">
                 <button class="card-button button" type="button">Listen now</button>
             </div>
         </article>
         <article class="featured-podcasts__cards-item card">
-            <img width="362" src="img/featured-podcasts/women-in-blue.png" alt="women-in-blue"
+            <img  src="img/featured-podcasts/women-in-blue.png" alt="women-in-blue"
                 class="featured-podcasts__card-image">
             <h3 class="cards__title">Rock 'N' Roll Football</h3>
             <div class="card-button">
@@ -25,9 +25,9 @@
             </div>
         </article>
         <article class="featured-podcasts__cards-item card">
-            <img width="362" src="img/featured-podcasts/dark-man.png" alt="dark-man"
+            <img  src="img/featured-podcasts/dark-man.png" alt="dark-man"
                 class="featured-podcasts__card-image">
-            <h3 class="cards__title">The Frank Skinner Show</h3>
+            <h3 class="cards__title">The Jason Manford Show</h3>
             <div class="card-button">
                 <button class="button" type="button">Listen now</button>
             </div>
