--- a/css/featured-podcasts.css
+++ b/css/featured-podcasts.css
@@ -20,6 +20,7 @@
 }
 .featured-podcasts__card-image{
     padding: 0 15px;
+    width: 362px;
 }
 .cards__title{
     color: var(--ui-dark-shade-color);
