add my partial addition

--- a/partials/careers.partial.html
+++ b/partials/careers.partial.html
@@ -11,7 +11,7 @@
             <p class="career__info">
                 If you are interested in joining our team and make a prospective career with lots of work and life benefits, you're in the right place. We are looking for young and talented enthusiasts.
             </p>
-            <a class="career__button" href="#">See Job Openings</a>
+            <a class="career__button" href="#" target="_blank" rel="noopener noreferrer">See Job Openings</a>
         </div>
     </div>
 </section>
