--- a/partials/win.partial.html
+++ b/partials/win.partial.html
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="prize__advert-footer">
-            <a class="prize__button" href="#">Find Out More</a>
+            <a class="prize__button" href="#" target="_blank" rel="noopener noreferrer">Find Out More</a>
         </div>
     </div>
 </section>
