Fixed social network icons

--- a/partials/follow-us.partial.html
+++ b/partials/follow-us.partial.html
@@ -9,28 +9,28 @@
                 <li class="follow-us__social-item">
                     <a href="#" class="follow-us__social-link">
                         <svg class="follow-us__social-icon">
-                            <use href="img/svg/fb-icon.svg#fb-icon"></use>
+                            <use href="img/svg/fb-icon-follow.svg#fb-ic-follow"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="follow-us__social-item">
                     <a href="#" class="follow-us__social-link">
                         <svg class="follow-us__social-icon">
-                            <use href="img/svg/tw-icon.svg#tw-icon"></use>
+                            <use href="img/svg/tw-icon-follow.svg#tw-ic-follow"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="follow-us__social-item">
                     <a href="#" class="follow-us__social-link">
                         <svg class="follow-us__social-icon">
-                            <use href="img/svg/ig-icon.svg#ig-icon"></use>
+                            <use href="img/svg/ig-icon-follow.svg#ig-ic-follow"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="follow-us__social-item">
                     <a href="#" class="follow-us__social-link">
                         <svg class="follow-us__social-icon">
-                            <use href="img/svg/yt-icon.svg#yt-icon"></use>
+                            <use href="img/svg/yt-icon-follow.svg#yt-ic-follow"></use>
                         </svg>
                     </a>
                 </li>
