--- a/css/global.css
+++ b/css/global.css
@@ -18,6 +18,7 @@
   --cards-background-color: #1ea9f1;
   --ui-text-size-mobile: 16px;
   --ui-block-title-mobile-letter-spacing: 0;
+  --ui-btn-secondary-bg-color: #f2f2f2;
   font-family: "Montserrat", sans-serif;
   scroll-behavior: smooth;
 }
