--- a/partials/events.partial.html
+++ b/partials/events.partial.html
@@ -48,5 +48,5 @@
             </div>
         </div>
     </div>
-    <a href="#" class="events__link button">More Events</a>
+    <a href="#" class="events__button-link">More Events</a>
 </section>
