--- a/css/events.css
+++ b/css/events.css
@@ -1,53 +1,93 @@
 .events {
-    background-color: var(--ui-light-shade-color);
+    background-color: var(--ui-btn-secondary-bg-color);
 }
-
+    
 .events__title {
     font-size: 30px;
     text-align: center;
     font-weight: bold;
-    padding: 15px;
+    padding: 30px;
 }
 
 .events__container {
-     
-    
-    
-    
     display: flex;
     flex-direction: column;
-    border: 10px solid var(--ui-light-shade-color);
-    padding: 5px;  
+    align-items:center;
+    justify-content: center; 
+    padding: 20px 10px 20px 10px;   
+    
+    
+    
+    
 }
-
+      
 .event__details {
+    padding: 10px;
     background-color: var(--brend-color);
     color: var(--ui-light-shade-color);
-    /* display: flex;
-    flex-direction: column; */
-    align-items: start;
+    align-items:flex-start;
     justify-content: space-between;
-    padding: 10px;  
+    padding: 10px; 
+    word-wrap: break-word;
+    flex: 1; 
+    
+    
+       
+}
+
+.event__date,
+.event__name {
+    font-weight: bold;
 }
 
 .event__card {
-    
-    width: 100%;
-    height: 50%;
-    object-fit: cover;
     object-position: 50% 0%;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
     
+}
+.event__card img{
+    object-position: 50% 0%;
+    width: auto;
+    height: auto;
+    object-fit: cover;
+    min-height: 140px;
+
+} 
+
+
+.events__button-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 28px;
+    background-color: var(--second-hover-color);
+    border: 1px;
+    min-width: 100px;
+    padding: 5px 15px;
+    cursor: pointer;
+    color: var(--ui-dark-accent-color);
+    text-decoration: none;
+}
+
+.events__button-link:hover {
+    background-color: var(--brend-color-gradient);
 }
 
 @media (min-width: 768px) {
     .events__container {
-        flex-direction: row;
-        
-    }
+        flex-direction: row;   
+    }   
 }
 
 @media (min-width: 992px) {
     .events__section {
-        
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;  
     }
-}
+} 
+ 
+
