--- a/partials/follow-us.partial.html
+++ b/partials/follow-us.partial.html
@@ -7,28 +7,28 @@
         <div class="follow-us__social-icons container">
             <ul class="follow-us__social-list">
                 <li class="follow-us__social-item">
-                    <a href="#" class="follow-us__social-link">
+                    <a href="https://www.facebook.com" class="follow-us__social-link">
                         <svg class="follow-us__social-icon">
                             <use href="img/svg/fb-icon-follow.svg#fb-ic-follow"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="follow-us__social-item">
-                    <a href="#" class="follow-us__social-link">
+                    <a href="https://twitter.com" class="follow-us__social-link">
                         <svg class="follow-us__social-icon">
                             <use href="img/svg/tw-icon-follow.svg#tw-ic-follow"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="follow-us__social-item">
-                    <a href="#" class="follow-us__social-link">
+                    <a href="https://www.instagram.com" class="follow-us__social-link">
                         <svg class="follow-us__social-icon">
                             <use href="img/svg/ig-icon-follow.svg#ig-ic-follow"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="follow-us__social-item">
-                    <a href="#" class="follow-us__social-link">
+                    <a href="https://www.youtube.com" class="follow-us__social-link">
                         <svg class="follow-us__social-icon">
                             <use href="img/svg/yt-icon-follow.svg#yt-ic-follow"></use>
                         </svg>
