--- a/partials/header.partial.html
+++ b/partials/header.partial.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="header__menu container">
     <div class="header__logo">
-      <a href="#" class="header__logo-link">
+      <a href="index.html" class="header__logo-link">
         <img
           class="header__logo-img"
           src="https://res2.weblium.site/res/5c94ea26a5effb00255a843a/5c987bdaa70bb800248d418d_optimized.webp"
@@ -27,7 +27,7 @@
             <a class="header__nav-link" href="#">Podcasts</a>
           </li>
           <li class="header__nav-item">
-            <a class="header__nav-link" href="#">News</a>
+            <a class="header__nav-link" href="news.html">News</a>
           </li>
           <li class="header__nav-item">
             <a class="header__nav-link" href="#">About Crazy FM</a>
@@ -44,28 +44,28 @@
         <div class="header__social-icons">
           <ul class="header__social-list">
             <li class="header__social-item">
-              <a href="#" class="header__social-link">
+              <a href="https://www.facebook.com" class="header__social-link">
                 <svg class="header__social-icon">
                   <use href="img/svg/fb-icon.svg#fb-icon"></use>
                 </svg>
               </a>
             </li>
             <li class="header__social-item">
-              <a href="#" class="header__social-link">
+              <a href="https://twitter.com" class="header__social-link">
                 <svg class="header__social-icon">
                   <use href="img/svg/tw-icon.svg#tw-icon"></use>
                 </svg>
               </a>
             </li>
             <li class="header__social-item">
-              <a href="#" class="header__social-link">
+              <a href="https://www.instagram.com" class="header__social-link">
                 <svg class="header__social-icon">
                   <use href="img/svg/ig-icon.svg#ig-icon"></use>
                 </svg>
               </a>
             </li>
             <li class="header__social-item">
-              <a href="#" class="header__social-link">
+              <a href="https://www.youtube.com" class="header__social-link">
                 <svg class="header__social-icon">
                   <use href="img/svg/yt-icon.svg#yt-icon"></use>
                 </svg>
