--- a/partials/footer.partial.html
+++ b/partials/footer.partial.html
@@ -20,7 +20,7 @@
                         <a class="footer__nav-link" href="#">Podcasts</a>
                     </li>
                     <li class="footer__nav-item">
-                        <a class="footer__nav-link" href="#">News</a>
+                        <a class="footer__nav-link" href="news.html">News</a>
                     </li>
                     <li class="footer__nav-item">
                         <a class="footer__nav-link" href="#">About Crazy FM</a>
