--- a/partials/header.partial.html
+++ b/partials/header.partial.html
@@ -44,28 +44,28 @@
         <div class="header__social-icons">
           <ul class="header__social-list">
             <li class="header__social-item">
-              <a href="https://www.facebook.com" class="header__social-link">
+              <a href="#" class="header__social-link">
                 <svg class="header__social-icon">
                   <use href="img/svg/fb-icon.svg#fb-icon"></use>
                 </svg>
               </a>
             </li>
             <li class="header__social-item">
-              <a href="https://twitter.com" class="header__social-link">
+              <a href="#" class="header__social-link">
                 <svg class="header__social-icon">
                   <use href="img/svg/tw-icon.svg#tw-icon"></use>
                 </svg>
               </a>
             </li>
             <li class="header__social-item">
-              <a href="https://www.instagram.com" class="header__social-link">
+              <a href="#" class="header__social-link">
                 <svg class="header__social-icon">
                   <use href="img/svg/ig-icon.svg#ig-icon"></use>
                 </svg>
               </a>
             </li>
             <li class="header__social-item">
-              <a href="https://www.youtube.com" class="header__social-link">
+              <a href="#" class="header__social-link">
                 <svg class="header__social-icon">
                   <use href="img/svg/yt-icon.svg#yt-icon"></use>
                 </svg>
