--- a/partials/schedule.partial.html
+++ b/partials/schedule.partial.html
@@ -1,6 +1,6 @@
 <div class="schedule-container">
     <h2 class="schedule">Schedule</h2>
-    <section class="schedule">
+    <section class="schedule desktop">
         <div class="schedule__table-container">
             <table class="schedule__table">
                 <thead>
@@ -11,38 +11,37 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="schedule__row accordion-toggle">
-                        <td class="schedule__data">Monday - Friday</td>
+                    <tr class="schedule__row">
+                        <td class="schedule__data">Mon - Fri</td>
                         <td class="schedule__time">7:00am - 9:00am</td>
                         <td class="schedule__program">Colin's Cuts</td>
                     </tr>
-
-                        <tr class="schedule__row accordion-toggle">
-                            <td class="schedule__data">Mon - Fri</td>
-                            <td class="schedule__time">9:00am - 11:00am</td>
-                            <td class="schedule__program">Emporium of Delights</td>
-                        </tr>
-                        <tr class="schedule__row accordion-toggle">
+                    <tr class="schedule__row">
+                        <td class="schedule__data">Mon - Fri</td>
+                        <td class="schedule__time">9:00am - 11:00am</td>
+                        <td class="schedule__program">Emporium of Delights</td>
+                    </tr>
+                        <tr class="schedule__row">
                             <td class="schedule__data">Mon - Fri</td>
                             <td class="schedule__time">11:00am - 1:00pm</td>
                             <td class="schedule__program">The Sound Lab Show</td>
                         </tr>
-                        <tr class="schedule__row accordion-toggle">
+                        <tr class="schedule__row">
                             <td class="schedule__data">Mon - Fri</td>
                             <td class="schedule__time">1:00pm - 3:00pm</td>
                             <td class="schedule__program">Throwdown Show</td>
                         </tr>
-                        <tr class="schedule__row accordion-toggle">
+                        <tr class="schedule__row">
                             <td class="schedule__data">Mon - Fri</td>
                             <td class="schedule__time">3:00pm - 5:00pm</td>
                             <td class="schedule__program">Vintage Remix Show</td>
                         </tr>
-                        <tr class="schedule__row accordion-toggle">
+                        <tr class="schedule__row">
                             <td class="schedule__data">Mon - Fri</td>
                             <td class="schedule__time">5:00pm - 7:00pm</td>
                             <td class="schedule__program">Dub You Sexy</td>
                         </tr>
-                        <tr class="schedule__row accordion-toggle">
+                        <tr class="schedule__row">
                             <td class="schedule__data">Mon - Fri</td>
                             <td class="schedule__time">7:00pm - 9:00pm</td>
                             <td class="schedule__program">Groove Motion Radio Show</td>
@@ -50,35 +49,66 @@
                         
                     </tbody>
                 </table>
-                
-                <div class="accordion-content">
-                    <p class="schedule__time">7:00am - 9:00am</p>
-                    <p class="schedule__program">Colin's Cuts</p>
+            </div>
+        </section>
+
+        <section class="schedule mobile">
+            <!-- Додайте контейнер для акордеону -->
+            <div class="accordion-container">
+                <!-- Додайте рядки акордеону, які відповідають рядкам таблиці -->
+                <div class="accordion-toggle">
+                    <p class="schedule__data">Mon - Fri</p>
+                    <div class="accordion-content">
+                        <p class="schedule__time">7:00am - 9:00am</p>
+                        <p class="schedule__program">Colin's Cuts</p>
+                    </div>
                 </div>
-                <div class="accordion-content">
-                    <p class="schedule__time">9:00am - 11:00am</p>
-                    <p class="schedule__program">Emporium of Delights</p>
+                <div class="accordion-toggle">
+                    <p class="schedule__data">Mon - Fri</p>
+                    <div class="accordion-content">
+                        <p class="schedule__time">9:00am - 11:00am</p>
+                        <p class="schedule__program">Emporium of Delights</p>
+                    </div>
                 </div>
+                <div class="accordion-toggle">
+                    <p class="schedule__data">Mon - Fri</p>
                 <div class="accordion-content">
+                   
                     <p class="schedule__time">11:00am - 1:00pm</p>
                     <p class="schedule__program">The Sound Lab Show</p>
                 </div>
+                </div>
+                <div class="accordion-toggle">
+                    <p class="schedule__data">Mon - Fri</p>
                 <div class="accordion-content">
+                   
                     <p class="schedule__time">1:00pm - 3:00pm</p>
                     <p class="schedule__program">Throwdown Show</p>
                 </div>
+                </div>
+                <div class="accordion-toggle">
+                    <p class="schedule__data">Mon - Fri</p>
                 <div class="accordion-content">
+                   
                     <p class="schedule__time">3:00pm - 5:00pm</p>
                     <p class="schedule__program">Vintage Remix Show</p>
                 </div>
+                </div>
+                <div class="accordion-toggle">
+                    <p class="schedule__data">Mon - Fri</p>
                 <div class="accordion-content">
+                   
                     <p class="schedule__time">5:00pm - 7:00pm</p>
                     <p class="schedule__program">Dub You Sexy</p>
                 </div>
+                </div>
+                <div class="accordion-toggle">
+                    <p class="schedule__data">Mon - Fri</p>
                 <div class="accordion-content">
+                   
                     <p class="schedule__time">7:00pm - 9:00pm</p>
                     <p class="schedule__program">Groove Motion Radio Show</p>
                 </div>
-            </div>
-        </section>
-    </div>
+                </div>
+            </section>
+        </div>
