Added changes to events.html and events.css

--- a/partials/events.partial.html
+++ b/partials/events.partial.html
@@ -2,7 +2,7 @@
     <h2 class="events__title">
         Events
     </h2>
-    <div class="events__section">
+    <div class="events__list">
         <div class="events__container">
             <div class="event__card">
                 <img src="img/events/girl-in-swimsuit.jpg" alt="The girl in the red swimsuit">
@@ -15,7 +15,7 @@
             </div>
         </div>
         <div class="events__container">  
-             <div class="event__card">
+            <div class="event__card">
                 <img src="img/events/polyhedron.jpg" alt="The white polyhedron">
             </div>
             <div class="event__details">
@@ -48,5 +48,7 @@
             </div>
         </div>
     </div>
-    <a href="#" class="events__button-link">More Events</a>
+    <div class="events__button">
+        <a href="#" class="events__button-link">More Events</a>
+    </div>
 </section>
