--- a/css/events.css
+++ b/css/events.css
@@ -3,7 +3,7 @@
 }
     
 .events__title {
-    font-size: 30px;
+    font-size: 35px;
     text-align: center;
     font-weight: bold;
     padding: 30px;
@@ -12,27 +12,37 @@
 .events__container {
     display: flex;
     flex-direction: column;
-    align-items:center;
-    justify-content: center; 
-    padding: 20px 10px 20px 10px;   
-    
-    
-    
-    
+    align-items: center; 
+    justify-content:space-around;
+    padding: 20px;
+}
+
+.event__card {
+    object-position: 50% 0%;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.event__card img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%; 
 }
       
 .event__details {
-    padding: 10px;
+    font-size: 14px;
     background-color: var(--brend-color);
     color: var(--ui-light-shade-color);
-    align-items:flex-start;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     justify-content: space-between;
-    padding: 10px; 
-    word-wrap: break-word;
-    flex: 1; 
-    
-    
-       
+    word-wrap: break-word;  
+    width: 50%;
+    padding: 10px;
 }
 
 .event__date,
@@ -40,53 +50,47 @@
     font-weight: bold;
 }
 
-.event__card {
-    object-position: 50% 0%;
-    flex: 1;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    
-}
-.event__card img{
-    object-position: 50% 0%;
-    width: auto;
-    height: auto;
-    object-fit: cover;
-    min-height: 140px;
-
-} 
-
-
-.events__button-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.events__button {
+    display: inline-block;
+    text-align: center;
+    padding: 15px;
+    margin: 35px 0;
+    border: none;
     border-radius: 28px;
     background-color: var(--second-hover-color);
-    border: 1px;
-    min-width: 100px;
-    padding: 5px 15px;
     cursor: pointer;
     color: var(--ui-dark-accent-color);
+    position: relative;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+    
+}
+.events__button-link {
     text-decoration: none;
+    color: var(--ui-dark-accent-color);
 }
 
-.events__button-link:hover {
+.events__button:hover {
     background-color: var(--brend-color-gradient);
 }
 
 @media (min-width: 768px) {
     .events__container {
         flex-direction: row;   
+        align-items: stretch;       
     }   
 }
 
 @media (min-width: 992px) {
-    .events__section {
+    .events__list {
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;  
+        padding-top: 50px;
+        padding-bottom: 100px;
+        padding-left: 100px;
+        padding-right: 100px;
     }
 } 
  
