--- a/css/index.css
+++ b/css/index.css
@@ -14,4 +14,4 @@
 @import url(crazy-fm.css);
 @import url(featured-podcasts.css);
 @import url(controls.css);
-@import url(about-us.css)
+@import url(about-us.css);
