--- a/partials/header.partial.html
+++ b/partials/header.partial.html
@@ -18,7 +18,7 @@
       <nav class="header__nav-menu">
         <ul class="header__nav-list">
           <li class="header__nav-item">
-            <a class="header__nav-link" href="#">Shows</a>
+            <a class="header__nav-link" href="shows.html">Shows</a>
           </li>
           <li class="header__nav-item">
             <a class="header__nav-link" href="#">Schedule</a>
