--- a/css/index.css
+++ b/css/index.css
@@ -15,3 +15,4 @@
 @import url(featured-podcasts.css);
 @import url(controls.css);
 @import url(about-us.css);
+@import url(carousel-why-choose-us.partial.css);
